JBVFS-197 VFSUtils#getVirtualURL requires permission